Virtuo - UX designer (H/F). Virtuo - UX designer. Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters. Job @ Clark Germany (Frankfurt): Lead UX / Design ... | JOIN. Ubisoft Senior UX Designer - Rainbow Six Siege | SmartRecruiters. Intouch Group - VP, UX Director. Intouch Group - VP, UX Director. Sia Partners [nod-A] UX Designer - Sprint Designer H/F | SmartRecruiters. Job @ Westphalia DataLab  (Münster): UX Designer (... | JOIN. Praxis Engineering Careers - UI/UX Designer. Brandwatch Careers - Product/UX Designer.       Senior UX Designer (m/f/d) with focus Usability Concept - designaffairs GmbH     .     UX Writer at MEKARI (PT. Mid Solusi Nusantara) . Sr. UX Designer - Revel Health - Career Page. iflix Careers - Junior UI/UX designer. Capgemini Japan Careers - Senior UX Consultant. Lecle Vietnam UI/UX Designer | SmartRecruiters. Daytwo - Ui/UX Designer. Job Application for Project Manager, UX Writing (Contract) at Sony .... eFront - UX Designer. Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN. UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore. Job @ GOWAGO (Zürich): UX Researcher/Designer | JOIN. Job @ Global Savings Group (Munich): UX Designer (... | JOIN. Shopify - UX Handbook Technical Writer. Lecle Vietnam UI/UX Designer | SmartRecruiters. Job Application for UX Engineer at dv01. Job Application for Principal UX & Product Designer at Conductor. ChannelVAS - Jobs: UX Designer - Apply online. Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page. Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online. Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters. Farfetch Careers - Senior UI/UX Product Designer. Servian - UX/UI Designer. Brandwatch Careers - Product/UX Designer. UX Designer - Think Company - Career Page.       Lead UI / UX Designer (m/w/d) - Caseking GmbH     . Job Application for Engineering: Lead 

--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/govirtuo/6bf921cf-1f69-45c8-94e5-09a3fe0e29ad'>Virtuo - UX designer (H/F)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/govirtuo/a8110242-da20-47bc-847f-1e5badd6beae'>Virtuo - UX designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SodernArianeGroup/743999692324593-ingenieur-d-etudes-mecaniques-et-thermique-responsable-de-lot-de-travaux-f-h-cdi'>Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -155,7 +163,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
+<h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -183,13 +191,13 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
       Lead UI / UX Designer (m/w/d) - Caseking GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -251,7 +259,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/ux-designer-porto'>
+<h5><a href='https://definedcrowd.recruitee.com/o/ux-designer-porto'>
       UX Designer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -317,7 +325,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
+<h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
     UI/UX Designer - 1 year contract (W/M) at Maison Moderne
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -353,7 +361,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mekari.recruiterbox.com/jobs/fk03f7q/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mekari.recruiterbox.com/jobs/fk03f7q/'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -404,7 +412,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 VERTRIEBSSPEZIALIST (M/W) in N?rnberg (published: 28.09.2018). Apply now 
 or check?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -458,16 +466,6 @@ or check?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691495567-ux-ui-designer-fotocasa-y-habitaclia'>Adevinta UX/UI Designer Fotocasa y Habitaclia | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/netflix/6f4e48f2-b850-4e81-90c4-6a1610610cb7'>Netflix - Data Experience - Software Engineer (UX)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... Netflix is the leading online video subscription service, reaching hundreds of 
-millions of US and international households. Netflix became well known as a 
-data?...</p>
-<hr/>
-<h5><a href='https://multiplica-1.workable.com/j/848B2B1987'>Multiplica - Jobs: UX-UI Designer - Apply online</a></h5> 
-<p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
 
