--- a/android-developer.html
+++ b/android-developer.html
@@ -127,7 +127,7 @@
 Have you ever dreamed of making a real impact on the way people access the 
 web?...</p>
 <hr/>
-<h5><a href='https://cellular.join.com/jobs/245965-android-developer-m-w-d?pid=5b8fa8e2510130b4d967&utm_source=alleskralle&utm_medium=free&utm_campaign=alleskralle%2Bbasic&utm_content=android%2Bdeveloper%2Bm%2Bw%2Bd'>Job @ CELLULAR (Vienna): Android Developer (m/w/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cellular.join.com/jobs/245965-android-developer-m-w-d?pid=5b8fa8e2510130b4d967&utm_source=alleskralle&utm_medium=free&utm_campaign=alleskralle%2Bbasic&utm_content=android%2Bdeveloper%2Bm%2Bw%2Bd'>Job @ CELLULAR (Vienna): Android Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 3 Tagen ... CELLULAR GmbH has a job opening for Android Developer (m/w/d) in Vienna (
 published: 20.05.2019). Apply now or check the other available jobs.</p>
@@ -169,7 +169,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -221,7 +221,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Vilnius Vilnius London Paris Manchester</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999691726271-android-developer'>Blue Wire Software Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999691726271-android-developer'>Blue Wire Software Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -300,7 +300,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
+<h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
       Senior Android Developer - Gapstars
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -330,7 +330,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-08</p>
 <hr/>
-<h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -338,7 +338,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/kaufDA/743999691221528-android-developer-senior-m-f-d-'>Bonial International Gmbh Android Developer (Senior) (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/kaufDA/743999691221528-android-developer-senior-m-f-d-'>Bonial International Gmbh Android Developer (Senior) (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -469,7 +469,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='http://redlatticeinc.applytojob.com/apply/1Sc1GsuBna/Android-Developer'>Android Developer - REDLattice Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redlatticeinc.applytojob.com/apply/1Sc1GsuBna/Android-Developer'>Android Developer - REDLattice Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -486,7 +486,7 @@ class Android applications. You work hard to play hard and take pride in?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-29</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
